[package]
name = "visual-journey-through-async-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
thread-id = "5.0.0"
futures = "0.3.31"
pyo3 = { version = "0.23.5" }
anyhow = "1"
rayon = "1.10.0"